Automatically backed up by Learn

--- a/app/views/coupons/show.html.erb
+++ b/app/views/coupons/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Details of Coupon</h1>
-Store : <%= @id.store %>
+Store : <h1><%= @id.store %></h1>
 <br>
 Coupon Code : <h1><%= @id.coupon_code %></h1>
 <br>
